src/objects/Provider_Facility_Associations__c.object
<CustomObject>
    <fields>
        <fullName>Hospital_App_Mode_of_Transmission__c</fullName>
        <label>Hospital App Mode of Transmission</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fedex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand Deliver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post to Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hospital_App_Requested_Date__c</fullName>
        <label>Hospital App Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hospital_Medicine_Program_Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hospital Medicine Program Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hospital_Name_2__c</fullName>
        <label>Hospital Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Priviledged_Date__c</fullName>
        <description>Date the Hospital Privleged the Medical Professional</description>
        <label>Hospital Priviledged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hospital_Privilege_Expiration_Date__c</fullName>
        <label>Hospital Privilege Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hospital_Privileging_Deferral_End_Date__c</fullName>
        <label>Hospital Privileging Deferral End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hospital_Privileging_Deferral_Reason__c</fullName>
        <label>Hospital Privileging Deferral Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending/Expired/expiring licenses or certifications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hospital_Privileging_Deferral_Start_Date__c</fullName>
        <label>Hospital Privileging Deferral Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hospital__c</fullName>
        <label>Hospital</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provider Facility Associations</relationshipLabel>
        <relationshipName>Provider_Facility_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate_Day__c</fullName>
        <label>Hourly Rate, Day</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate_Holiday__c</fullName>
        <label>Hourly Rate, Holiday</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate_Night__c</fullName>
        <label>Hourly Rate, Night</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate_Weekend__c</fullName>
        <label>Hourly Rate, Weekend</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_Guarantee_Start_Date__c</fullName>
        <description>Use Shift Guarantee per lyn. Field not needed.</description>
        <label>Hours Guarantee Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours_Scheduled_Next_Month__c</fullName>
        <label>Hours Scheduled Next Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Scheduled_This_Month__c</fullName>
        <label>Hours Scheduled This Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Completed_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Must complete new SG Application including the new references and written attestation from Physician describing impairment, treatment, present status and current fitness for clerical work.</inlineHelpText>
        <label>Received Current Completed References</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Monitor_Six_Month_Review_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is an invisible checkbox used to manage Workflow Email Notification that are Time-based six months from the Last Review Date on an Impaired Physician.</description>
        <label>Monitor_Six_Month_Review__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Received_Cleared_To_Work_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Current Cleared To Work Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Received_Monitoring_Agency_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Monitoring Agency Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Received_NPDB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Current NPDB Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Received_OIG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Current OIG Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Received_Unrestricted_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Current Unrestricted License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Received_Written_Assestation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Must complete new SG Application including the new references and written attestation from Physician describing impairment, treatment, present status and current fitness for clerical work.</inlineHelpText>
        <label>Received Written Attestation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Unrestricted_DEA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Current Unrestricted DEA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Unrestricted_Priviledges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Current Unrestricted Privileges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactivation_Request_Approved_Denied__c</fullName>
        <label>Inactivation Request Approved/Denied</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inactive_Reason__c</fullName>
        <label>Inactive Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Agreement Not Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coverage Discontinued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital App Not Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Contract Termination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lengthy Licensing Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP Not Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Risk Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per RVP/RMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privileges Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling Issues</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inactive_WF_indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use to control workflow actions, set when inactivated and use to tigger after reactivation.  Then clear and have ready for next inactivation.  Used in PFA inactivation / reactivation process workflows.</description>
        <label>Inactive WF indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentive_Bonus_Effective_Date__c</fullName>
        <label>Incentive Bonus Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incentive_Bonus_Payout__c</fullName>
        <label>Incentive Bonus Payout</label>
        <picklist>
            <picklistValues>
                <fullName>Incentive Bonus Payout for Provider Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incentive_Bonus_Rate__c</fullName>
        <label>Incentive Bonus Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentive_Bonus_Repayment__c</fullName>
        <label>Incentive Bonus Repayment</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Rata</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initiate_Facility_Rates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initiate Facility Rates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ins_Switch_Date_Self_Insured_to_TSG__c</fullName>
        <label>Ins Switch Date (Self Insured to TSG)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ins_Switch_Date_TSG_Self_Insured__c</fullName>
        <label>Ins Switch Date (TSG to Self Insured)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instructions_to_Contracting__c</fullName>
        <label>Instructions to Contracting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Insurance_Effective_Date__c</fullName>
        <label>Insurance Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Expiration_Date__c</fullName>
        <label>Insurance Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Provided_By__c</fullName>
        <label>Insurance Provided By</label>
        <picklist>
            <picklistValues>
                <fullName>TSG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locum Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interview_Completed_Date__c</fullName>
        <label>Interview Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_Worked__c</fullName>
        <label>Last Date Worked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Locums_backup_physicians__c</fullName>
        <label>Backup supervising physicians</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MM_Corp_Address__c</fullName>
        <description>Systematically Updated from Corporate Entity</description>
        <label>MM Corp Address</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MM_Corp_City__c</fullName>
        <description>Systematically updated from Corporate Entity for Provider Agreement Template population.</description>
        <label>MM Corp City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MM_Corp_State__c</fullName>
        <description>Systematically updated from Corporate Entity</description>
        <label>MM Corp State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MM_Corp_Zip__c</fullName>
        <description>Systematically updated from Corporate Entity for Provider Agreement Mail Merge Templates</description>
        <label>MM Corp Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MM_Corporation__c</fullName>
        <description>Systematically Updated from the Corporate Entity</description>
        <label>MM Corporation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MM_License_State__c</fullName>
        <description>Systematically updated from Account for Provider Mail Merge Template</description>
        <label>MM License State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MM_Signatory_Name__c</fullName>
        <description>Systematically updated from Corporate Entity for Provider Agreement Mail Merge Templates</description>
        <label>MM Signatory Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MM_Signatory_Title__c</fullName>
        <description>Systematically updated for Provider Agreement Mail Merge Templates</description>
        <label>MM Signatory Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mark_for_Deletion_Comment__c</fullName>
        <label>Mark for Deletion Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mark_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Dir_Orientation_Complete_Date__c</fullName>
        <label>Medical Dir Orientation Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Midlevel_Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Midlevel Provider Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monitoring_Agency_Addresss__c</fullName>
        <label>Monitoring Agency Addresss</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Agency_City__c</fullName>
        <label>Monitoring Agency City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Agency_State__c</fullName>
        <label>Monitoring Agency State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monitoring_Agency_Zip_Code__c</fullName>
        <label>Monitoring Agency Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Agency__c</fullName>
        <label>Monitoring Agency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Hours_Guaranteed__c</fullName>
        <label>Monthly Hours Guaranteed</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly__c</fullName>
        <description>Monthly rate for the medical directors</description>
        <label>Monthly</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_of_Sponsor__c</fullName>
        <label>Name of Sponsor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Days_in_App_to_Provider_Deferment__c</fullName>
        <formula>IF( 
      ISNULL(App_to_Provider_Deferral_End_Date__c ), 
TODAY()-App_to_Provider_Deferral_Start_Date__c, 
App_to_Provider_Deferral_End_Date__c-App_to_Provider_Deferral_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Days in App to Provider Deferment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Days_in_At_Hosp_Deferrment__c</fullName>
        <formula>IF( ISNULL( At_Hospital_Deferral_End_Date__c ) ,  TODAY()  -  At_Hospital_Deferral_Start_Date__c ,  At_Hospital_Deferral_End_Date__c -  At_Hospital_Deferral_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Days in At Hosp Deferrment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Days_in_Provider_to_SG_Deferment__c</fullName>
        <formula>IF( 
      ISNULL(Provider_to_SG_Deferral_End_Date__c ), 
TODAY()-Provider_to_SG_Deferral_Start_Date__c, 
Provider_to_SG_Deferral_End_Date__c-Provider_to_SG_Deferral_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Days in Provider to SG Deferment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Hours_Anticipated_to_Work__c</fullName>
        <label># of Hours Anticipated to Work</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Hours_Guaranteed__c</fullName>
        <label># of Hours Guaranteed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Shifts_Guaranteed__c</fullName>
        <label># of Shifts Guaranteed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Compete_Comments__c</fullName>
        <label>Non Compete Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Non_Compete_Damage_Amount__c</fullName>
        <label>Non Compete Damage Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Compete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Compete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Agreement_Request_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Standard Agreement Request Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Pay_Rate_Required__c</fullName>
        <formula>IF( OR(
         AND( 
            R1_Difference__c &lt;&gt; (R1_Facility__c -(2 *  R1_Facility__c )),
            R1_Difference__c &lt;&gt; 0), 
         AND( 
            R2_Difference__c &lt;&gt; (R2_Facility__c -(2 *  R2_Facility__c )),
            R2_Difference__c &lt;&gt; 0), 
         AND( 
            R3_Difference__c &lt;&gt; (R3_Facility__c -(2 *  R3_Facility__c )),
            R3_Difference__c &lt;&gt; 0), 
         AND( 
            R4_Difference__c &lt;&gt; (R4_Facility__c -(2 *  R4_Facility__c )),
            R4_Difference__c &lt;&gt; 0), 
         AND(           
            R5_Difference__c &lt;&gt; (R5_Facility__c -(2 *  R5_Facility__c )),
            R5_Difference__c &lt;&gt; 0), 
         AND( 
            R6_Difference__c &lt;&gt; (R6_Facility__c -(2 *  R6_Facility__c )),
            R6_Difference__c &lt;&gt; 0), 
         AND( 
            R7_Difference__c &lt;&gt; (R7_Facility__c -(2 *  R7_Facility__c )),
            R7_Difference__c &lt;&gt; 0), 
         AND( 
            R8_Difference__c &lt;&gt; (R8_Facility__c -(2 *  R8_Facility__c )),
            R8_Difference__c &lt;&gt; 0), 
         AND( 
            R9_Difference__c &lt;&gt; (R9_Facility__c -(2 *  R9_Facility__c )),
            R9_Difference__c &lt;&gt; 0), 
         AND( 
            R10_Difference__c &lt;&gt; (R10_Facility__c -(2 *  R10_Facility__c )),
            R10_Difference__c &lt;&gt; 0)), 
       
          &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Standard Pay Rate Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Noof_Days_in_Hosp_Privileging_Deferrment__c</fullName>
        <formula>IF( 
      ISNULL( Hospital_Privileging_Deferral_End_Date__c ), 
TODAY()-Hospital_Privileging_Deferral_Start_Date__c, 
Hospital_Privileging_Deferral_End_Date__c-Hospital_Privileging_Deferral_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Days in Hosp Privileging Deferrment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_1st_Week_Call_Attempts__c</fullName>
        <label>Number of 1st Week Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_30_Day_Call_Attempts__c</fullName>
        <label>Number of 30 Day Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_60_Day_Call_Attempts__c</fullName>
        <label>Number of 60 Day Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Anniversary_Call_Attempts__c</fullName>
        <label>Number of Anniversary Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_CC_Anniversary_Call_Attempts__c</fullName>
        <label>Number of CC - Anniversary Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_CC_New_Hire_Call_Attempts__c</fullName>
        <label>Number of CC - New Hire Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_CME_Courses_Required__c</fullName>
        <label>Number of CME Courses Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Claims__c</fullName>
        <description>To track the Number of Claims</description>
        <label># of Claims</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_FSD_Call_Attempts__c</fullName>
        <label>Number of FSD Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sponsor__c</fullName>
        <label>Number of Sponsor</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TSG Job Posting</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N300000013PecEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Source__c</fullName>
        <label>Original Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Collab_Agmnt_Comment__c</fullName>
        <label>PA / Collab Agmnt Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PA_Collaborative_Agmnt_board_appr_date__c</fullName>
        <label>PA / Collab Agmnt board approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PA_Collaborative_Agmnt_rec_from_prov__c</fullName>
        <label>PA / Collab Agmnt rec from provider</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PA_Collaborative_Agmnt_sent_to_hospital__c</fullName>
        <label>PA / Collab Agmnt sent to hospital</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PA_Collaborative_Agmnt_sent_to_state__c</fullName>
        <label>PA / Collab Agmnt sent to state</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PA_State_Board_Supervisory_NP_Collaborat__c</fullName>
        <label>PA / Collab Agmnts sent to provider</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PEP_Carrier_Rec_Date__c</fullName>
        <description>Date Provider Enrollment Package was received back from the Carrier (provider PEP completed) (Prov Enroll)</description>
        <label>PEP Carrier Rec Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PEP_Carrier_Sent_Date__c</fullName>
        <description>Date Provider Enrollment Package was Sent to the Carrier. (Prov Enroll)</description>
        <label>PEP Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PEP_Completed_Date__c</fullName>
        <description>Date Provider Enrollment Package from the provider was completed (Prov Enroll)</description>
        <label>PEP Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PEP_Enrollment_Status__c</fullName>
        <label>PEP Enrollment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending EDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Group PIN #</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Ins Carrier Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Issue with Billing Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending To Be Sent to Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending with CPEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending with Insurance Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending with Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending with Provider Enrollement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Write Off/PIN Eff date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PEP_First_Sent_Date__c</fullName>
        <description>Provider Enrollment Package, first date a PEP was sent to the provider. (CPEC)</description>
        <label>PEP First Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PEP_Last_Sent_Date__c</fullName>
        <description>Provider Enrollment Package, Last date a package was sent to the provider. (CPEC)</description>
        <label>PEP Last Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PEP_PFA_Comments__c</fullName>
        <description>Any comments about the Set up a provider.  Also Holds time stamps for who, when a PEP Field was updated. (CPEC &amp; Prov Enroll)</description>
        <label>PEP PFA Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PEP_Rec_Date__c</fullName>
        <description>Date Provider Enrollment Package was received from the provider (CPEC)</description>
        <label>PEP Rec Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PEP_Status_Comment__c</fullName>
        <label>PEP Status Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pay_Instructions__c</fullName>
        <label>Pay Instructions</label>
        <type>TextArea</type>
    </fields>
</CustomObject>